--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "php": ">=5.6.4",
         "illuminate/events": "^5.3@dev",
         "illuminate/notifications": "^5.3@dev",
+        "illuminate/queue": "^5.3@dev",
         "illuminate/support": "^5.3@dev",
         "pubnub/pubnub": "^3.8"
     },
