--- a/composer.json
+++ b/composer.json
@@ -13,10 +13,10 @@
     ],
     "require": {
         "php": ">=5.6.4",
-        "illuminate/events": "^5.3@dev",
-        "illuminate/notifications": "^5.3@dev",
-        "illuminate/queue": "^5.3@dev",
-        "illuminate/support": "^5.3@dev",
+        "illuminate/events": "5.3.*",
+        "illuminate/notifications": "5.3.*",
+        "illuminate/queue": "5.3.*",
+        "illuminate/support": "5.3.*",
         "pubnub/pubnub": "^3.8"
     },
     "require-dev": {
