--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,9 @@
             "NotificationChannels\\Pubnub\\Test\\": "tests"
         }
     },
+    "scripts": {
+        "test": "vendor/bin/phpunit"
+    },
     "config": {
         "sort-packages": true
     },
