--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "laravel-notification-channels/pubnub",
-    "description": "PubNub Notifications Channel for Laravel 5.3",
+    "description": "PubNub Notifications Channel for Laravel",
     "homepage": "https://github.com/laravel-notification-channels/pubnub",
     "license": "MIT",
     "authors": [
@@ -12,15 +12,15 @@
         }
     ],
     "require": {
-        "php": ">=5.6.4",
-        "illuminate/notifications": "5.3.*",
-        "illuminate/queue": "5.3.*",
-        "illuminate/support": "5.3.*",
+        "php": ">=7.1",
+        "illuminate/notifications": "~5.5 || ~6.0",
+        "illuminate/queue": "~5.5 || ~6.0",
+        "illuminate/support": "~5.5 || ~6.0",
         "pubnub/pubnub": "^3.8"
     },
     "require-dev": {
-        "mockery/mockery": "^0.9.5",
-        "phpunit/phpunit": "4.*"
+        "mockery/mockery": "^1.0",
+        "phpunit/phpunit": "~7.0 || ~8.0"
     },
     "autoload": {
         "psr-4": {
@@ -37,6 +37,5 @@
     },
     "config": {
         "sort-packages": true
-    },
-    "minimum-stability": "dev"
+    }
 }
